@@ -1,3 +1,7 @@
+24 April 2008: Wouter
+	- chroot checks improved. working directory relative to chroot.
+	  checks if config file path is inside chroot. Documentation on it.
+
 23 April 2008: Wouter
 	- parseunbound.pl contrib update from Kai Storbeck for threads.
 	- iana ports update
